[workspace]
members = [
    ".",
    "printable"
]

[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1" # 错误处理
printable = { version = "*", path = "printable" } # 子 crate

[dev-dependencies]
criterion = "0.4" # 压力测试库
